# asynchronous-codec

./: CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yml
benches/: lines.rs
src/: decoder.rs  encoder.rs  framed.rs  framed_read.rs  framed_write.rs  fuse.rs  lib.rs  message_patterns.rs  recvsend.rs  send.rs  sendrecv.rs
src/codec/: bytes.rs  cbor.rs  json.rs  length.rs  lines.rs  mod.rs
tests/: bytes.rs  framed_read.rs  framed_write.rs  length_delimited.rs  lines.rs  reqres.rs
